1. Changes to make activemq functionally work 2. Search Result and Seller Data parent/child relation in JSON and storing it as document 3. DTO and conversion of it to Entity before storing 4. Ubuntu script file to run 5. Custom sequence implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,16 @@
-spring.data.mongodb.uri=**********
+# MongoDB configurations
+spring.data.mongodb.uri=mongodb://devuser:Avatar!Devuer123,@\
+      cluster0-shard-00-00-injni.mongodb.net:27017,\
+      cluster0-shard-00-01-injni.mongodb.net:27017,\
+      cluster0-shard-00-02-injni.mongodb.net:27017/admin?replicaSet=Cluster0-shard-0&ssl=true
 spring.data.mongodb.database=retaildata
 
+# ActiveMQ configurations
 spring.activemq.user=sankarg
 spring.activemq.password=sankarg123
 spring.activemq.broker-url=tcp://localhost:61616?jms.redeliveryPolicy.maximumRedeliveries=1
 
+# Logging configurations
 logging.level=DEBUG
 logging.level.org.springframework.web=DEBUG
 logging.level.com.sgglabs=DEBUG
