--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.sgglabs.retail</groupId>
-    <artifactId>retaildatastore</artifactId>
+    <artifactId>retaildata-store</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>retaildatastore</name>
+    <name>retaildata-store</name>
     <url>http://www.sgglabs.com/retaildatastore</url>
     <description>Set of implementation to store the retail data on web</description>
 
@@ -26,6 +26,13 @@
         <version>2.0.4.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
+    <repositories>
+        <repository>
+            <id>localRepository</id>
+            <url>file://D:/HM/Applications/Apache/maven/build-lib-repo/</url>
+        </repository>
+    </repositories>
 
     <dependencies>
         <dependency>
@@ -47,6 +54,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.sgglabs.retail</groupId>
+            <artifactId>retaildata-model</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
