Brought back the doc model classes to resolve dependency injection issues

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # MongoDB configurations
-spring.data.mongodb.uri=******
+spring.data.mongodb.uri=********
 spring.data.mongodb.database=retaildata
 
 # ActiveMQ configurations
