changes for local repos

--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
     <repositories>
         <repository>
             <id>localRepository</id>
-            <url>file://D:/sankarg/Applications/Apache/maven/build-lib-repo/</url>
+            <url>file://../../../applications/apache/maven/repository</url>
         </repository>
     </repositories>
 
